--- a/PP - 01 - Sign Form/styles/style.css
+++ b/PP - 01 - Sign Form/styles/style.css
@@ -1,14 +1,21 @@
-body, html, main {
+* {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins',  sans-serif;
+    font-family: 'Poppins', sans-serif;
+}
+
+body, html, main, #registration, #login {
     height: 100%;
 }
 
-.sigin-side {
+/* Resgistration */
+
+.registration-text-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-align: center;
     width: 50%;
-    padding: 10%;
     height: 100%;
     box-sizing: border-box;
     background: linear-gradient(to right,#3AAFA9, #2b7a78);
@@ -17,12 +24,72 @@ body, html, main {
     float: left;
 }
 
-.sigin-side p {
+.registration-text {
+    width: 60%;
+}
+
+.registration-form-box {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: right;
+    width: 50%;
+    box-sizing: border-box;
+    text-align: center;
+    color: #2b7a78;
+}
+
+/* Login */
+
+.login-text-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 50%;
+    padding: 1%;
+    height: 100%;
+    box-sizing: border-box;
+    background: linear-gradient(to right, #3AAFA9, #2b7a78);
+    border-radius: 7% 0 0 7%;
+    color: #feffff;
+    float: right;
+}
+
+.login-form-box {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    float: left;
+    width: 50%;
+    box-sizing: border-box;
+    text-align: center;
+    color: #2b7a78;
+}
+
+.login-text {
+    width: 60%;
+}
+
+.login-form a {
+    text-decoration: none;
+    color: #2b7a78;
+}
+
+.login-form a:hover {
+    text-decoration: underline;
+}
+
+/* Both */
+
+.registration-text p, .login-text p {
     margin-top: 2em;
     margin-bottom: 0;
 }
 
-.sigin-side button {
+.registration-text button, .login-text button {
     width: 160px;
     height: 40px;
     border-radius: 10px;
@@ -36,15 +103,6 @@ body, html, main {
     font-family: 'poppins';
 }
 
-.sigin-side-form {
-    float: right;
-    width: 50%;
-    box-sizing: border-box;
-    padding: 5% 5%;
-    text-align: center;
-    color: #2b7a78;
-}
-
 input{
     width: 400px;
     height: 40px;
@@ -55,7 +113,7 @@ input{
     border: none;
 }
 
-.sigin-side-form button {
+.registration-form button, .login-form button {
     margin-top: 10px;
     width: 160px;
     height: 40px;
@@ -71,8 +129,23 @@ input{
     box-shadow: -2px -2px 1px rgba(207, 207, 207, 0.85);
 }
 
-.registration-icons div {
-    display: inline-block;
+.registration-form p, .login-form p {
+    margin: 7px  2px;
+    font-size: 14px;
+}
+
+/* Ícones de registro */
+
+.acess-icons {
+    display: flex;
+    justify-content: center;
+}
+
+.acess-icons>div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
     width: 50px;
     height: 50px;
     box-sizing: border-box;
@@ -80,13 +153,11 @@ input{
     border-radius: 6px;
 }
 
-.sigin-side-form p {
-    margin: 7px  2px;
-    font-size: 14px;
-}
-
-.registration-icons img{
+.acess-icons img{
     width: 25px;
     height: 25px;
-    margin-top: 7.25px;
+}
+
+#registration {
+    display: none;
 }
