--- a/PP - 01/styles/style.css
+++ b/PP - 01/styles/style.css
@@ -4,7 +4,8 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body, html, main, #registration, #login {
+body, html, main, 
+#registration, #login {
     height: 100%;
 }
 
@@ -43,34 +44,39 @@ body, html, main, #registration, #login {
 /* Login */
 
 .login-text-box {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    width: 50%;
-    padding: 1%;
+    display: flex;
+    float: right;
+    justify-content: center;
+
     height: 100%;
-    box-sizing: border-box;
+    width: 50%;
+
     background: linear-gradient(to right, #3AAFA9, #2b7a78);
     border-radius: 7% 0 0 7%;
     color: #feffff;
-    float: right;
 }
 
 .login-form-box {
-    height: 100%;
-    display: flex;
-    justify-content: center;
     align-items: center;
+    display: flex;
     float: left;
+    justify-content: center;
+
+    height: 100%;
     width: 50%;
-    box-sizing: border-box;
-    text-align: center;
+
     color: #2b7a78;
+    transition: cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
 .login-text {
     width: 60%;
+    text-align: center;
+}
+
+.login-form {
+    text-align: center;
 }
 
 .login-form a {
